<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_color"
    tools:context=".Password_change">

    <TextView
        android:id="@+id/password_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="158dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/password_change"
        android:textColor="@color/password_change"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/conpwd"
        android:layout_width="259dp"
        android:layout_height="47dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/conpwd"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/newpwd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/newpwd"
        app:layout_constraintTop_toBottomOf="@+id/newpwd" />

    <EditText
        android:id="@+id/mobileno"
        android:layout_width="259dp"
        android:layout_height="47dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/mobileno"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/conpwd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/conpwd"
        app:layout_constraintTop_toBottomOf="@+id/conpwd" />

    <Button
        android:id="@+id/sendOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/sendOTPbtn"
        android:text="@string/sendOTP"
        android:textColor="@color/sendOTPtxt"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/mobileno"
        app:layout_constraintStart_toStartOf="@+id/mobileno"
        app:layout_constraintTop_toBottomOf="@+id/mobileno" />

    <LinearLayout
        android:id="@+id/otp"
        android:layout_width="191dp"
        android:layout_height="49dp"
        android:layout_marginBottom="18dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/verify"
        app:layout_constraintEnd_toEndOf="@+id/sendOTP"
        app:layout_constraintStart_toStartOf="@+id/sendOTP">

        <EditText
            android:id="@+id/no1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/no1"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextNumber6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/no2"
            android:inputType="number" />

        <EditText
            android:id="@+id/no3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/no3"
            android:inputType="number" />

        <EditText
            android:id="@+id/no4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/no4"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/verifyPbtn"
        android:text="@string/verify"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/resend"
        app:layout_constraintEnd_toEndOf="@+id/otp"
        app:layout_constraintStart_toStartOf="@+id/otp" />

    <Button
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/resendbtn"
        android:text="@string/resend"
        android:textColor="@color/resendtxt"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/verify"
        app:layout_constraintStart_toStartOf="@+id/verify" />

    <EditText
        android:id="@+id/newpwd"
        android:layout_width="259dp"
        android:layout_height="47dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/newpwd"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_change" />

</androidx.constraintlayout.widget.ConstraintLayout>