<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regi"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="158dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/textView7"
        android:textColor="@color/register"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameR"
        android:layout_width="259dp"
        android:layout_height="47dp"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:hint="@string/usernameR"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/passwordR"
        android:layout_width="259dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/passwordR"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/emailR"
        app:layout_constraintEnd_toEndOf="@+id/usernameR"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameR"
        app:layout_constraintVertical_bias="0.516" />

    <EditText
        android:id="@+id/emailR"
        android:layout_width="259dp"
        android:layout_height="47dp"
        android:layout_marginBottom="328dp"
        android:ems="10"
        android:hint="@string/emailR"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="243dp"
        android:backgroundTint="@color/registerbtn"
        android:text="@string/register_btn"
        android:textColor="@color/registerbtntxt"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailR"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="204dp"
        android:layout_height="28dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:text="@string/textView9"
        android:textColor="@color/textView9"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerbtn" />

    <Button
        android:id="@+id/loginR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="142dp"
        android:backgroundTint="@color/loginR"
        android:text="@string/loginR"
        android:textColor="@color/loginbtntxt"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/registerbtn"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>