<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/get_started"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_color"
    tools:context=".Get_started">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="158dp"
        android:layout_height="143dp"
        android:layout_marginTop="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download__1_" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="199dp"
        android:layout_height="50dp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="280dp"
        android:fontFamily="@font/barrio"
        android:text="@string/textView4"
        android:textColor="@color/textView4"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="156dp"
        android:layout_height="54dp"
        android:layout_marginStart="149dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="106dp"
        android:fontFamily="@font/barrio"
        android:text="@string/textView5"
        android:textColor="@color/textView5"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/getstarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="78dp"
        android:backgroundTint="#0F9E15"
        android:fontFamily="sans-serif-black"
        android:text="@string/getstarted"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>